# batch-streaming-data-architecture

./: .gitignore  README.md  docker-compose.yml  environment
batch/: credentials.json  setup-airbyte.sh
batch/config/: hive-site.xml  metastore-site.xml
batch/etc/catalog/: hive.properties
batch/sql/: seed.sql  setup-database.sql
datasources/: pyproject.toml
datasources/batch/: data_producer.py  docker-compose.yml  entities.py  repositories.py  test.py
datasources/batch/sql/: create-tables.sql
delta_lake/: helpers.py  pyproject.toml  spark.py  staging_to_bronze.py
docs/: mssql-setup.md
incremental/: README.md  docker-compose.yml  setup-airbyte.sh
incremental/sql/: create-table.sql
incremental/src/: Dockerfile
source-app/: event_producer.py  insert_data.py  purchase_generator.py  requirements.txt
source-app/notebooks/: events.ipynb  normal_distribution.ipynb
source-app/sql/: create-table.sql  setup-database.sql
source_app/: Dockerfile  generate_order_data.py  mssql.py  seed.py
source_app/sql/: enable-cdc.sql  setup-database.sql
streaming/: aa.json  druid-environment
streaming/config/: druid-spec.json  mssql-properties.json
streaming/docker/: druid.Dockerfile
streaming/logs/: confluent-install.txt
